--- a/scripts/install
+++ b/scripts/install
@@ -26,6 +26,7 @@ install_for_linux() {
         echo Debian/Ubuntu detected, installing via apt-get ... >&2
         sudo apt-get update
         sudo apt-get install -y imagemagick texlive-latex-extra
+        ./scripts/enable-imagemagick-permissions
     else
         fail "No known package manager for $OSTYPE \($(uname -a)\), quitting"
     fi
